--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,10 @@ services:
     build:
       context: ./reticulum
       network: ${NETWORK_NAME:-hubs-default}
+      args: 
+        - PERMS_KEY=${PERMS_KEY}
+    volumes:
+      - storage:/ret/storage/dev
     networks:
       default:
         aliases:
@@ -39,10 +43,16 @@ services:
 
   dialog:
     tty: true
+    env_file: .env
     build:
       context: ./dialog
+      args: 
+        - PERMS_CERT=${PERMS_CERT}
 
 
 networks:
   default:
     name: ${NETWORK_NAME:-hubs-default}
+
+volumes:
+  storage:
