--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -23,6 +23,10 @@ services:
     ports:
       - 4443:4443
 
+  spoke:
+    ports:
+      - 9090:9090
+
   reticulum:
     volumes:
       - ./reticulum/reticulum/config:/ret/config
