proxy, mail, admin, postgrest

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 POSTGREST_INTERNAL_HOSTNAME=db
 DB_HOST=db
-DIALOG_HOSTNAME=dialog
+HUBS_CLIENT_INTERNAL_HOSTNAME=hubs.local
+SPOKE_INTERNAL_HOSTNAME=hubs.local
+HUBS_ADMIN_INTERNAL_HOSTNAME=hubs.local
+DIALOG_HOSTNAME=hubs.local
 DIALOG_PORT=4443
 
 MEDIASOUP_LISTEN_IP=0.0.0.0
