--- a/spoke/Dockerfile
+++ b/spoke/Dockerfile
@@ -2,9 +2,10 @@ FROM node:lts-slim
 
 WORKDIR /app
 COPY spoke .
+
+# git submodule make errors
+RUN rm .git -rf
+
 RUN apt-get update && apt-get install -y git
-RUN apt-get install -y mc
 
 RUN yarn install
-
-CMD scripts/run-local-reticulum.sh
